--- a/main.css
+++ b/main.css
@@ -1659,19 +1659,20 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
-/* Dropdown Button */
+		/* Dropdown Button */
 .dropbtn {
   background-color: #343D46;
   color: white;
-  padding: 4px;
-  font-size: 11px;
+  margin: 1px;
+  font-size: 12px;
   border: none;
 }
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
+  position: left;
   display: inline-block;
+
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -1699,4 +1700,4 @@ input, select, textarea {
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #a7adba;}
+.dropdown:hover .dropbtn {background-color: #6600ff;}
