--- a/main.css
+++ b/main.css
@@ -1369,7 +1369,7 @@ input, select, textarea {
 				}
 
 					#header nav ul li a:hover {
-						background-color: rgba(255, 255, 255, 0.075);
+						background-color: #6600ff;
 					}
 
 					#header nav ul li a:active {
