--- a/main.css
+++ b/main.css
@@ -1361,21 +1361,20 @@ input, select, textarea {
 					min-width: 7.5rem;
 					height: 2.75rem;
 					line-height: 2.75rem;
-					padding: 0 1.25rem 0 1.45rem;
+					padding: 0 0rem 0 0rem;
 					text-transform: uppercase;
 					letter-spacing: 0.2rem;
 					font-size: 0.8rem;
 					border-bottom: 0;
 				}
-
 					#header nav ul li a:hover {
 						font-weight: bold;
 						font-size: medium;
 						box-shadow: 0px 0px .5em .4em #eeeeee;
 						background-color: #000000;
 						color: #eeeeee;
+						position: relative;
 					}
-
 					#header nav ul li a:active {
 						background-color: darkgrey;
 					}
