--- a/main.css
+++ b/main.css
@@ -189,7 +189,6 @@ input, select, textarea {
 		}
 
 		h1.major, h2.major, h3.major, h4.major, h5.major, h6.major {
-			border-bottom: solid 1px #ffffff;
 			width: -moz-max-content;
 			width: -webkit-max-content;
 			width: -ms-max-content;
@@ -199,10 +198,12 @@ input, select, textarea {
 		}
 
 	h1 {
-		font-size: 2.25rem;
+		font-size: 2.5rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
+		text-shadow: 3px 3px #6600ff;
 	}
+
 
 	h2 {
 		font-size: 1.5rem;
