--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ input, select, textarea {
 		font-size: 1.75rem;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
-		text-decoration: #6600FF;
+		text-shadow: 2px 2px #6600FF;
 	}
 
 
