--- a/main.css
+++ b/main.css
@@ -197,10 +197,11 @@ input, select, textarea {
 			margin: 0 0 2rem 0;
 		}
 	h1 {
-		font-size: 1.75rem;
+		font-size: 2rem;
+		font-weight: bold;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
-		text-shadow: 2px 2px #6600FF;
+		color: #6600FF;
 	}
 
 
