--- a/main.css
+++ b/main.css
@@ -200,7 +200,7 @@ input, select, textarea {
 		font-weight: bold;
 		line-height: 1.3;
 		letter-spacing: 0.5rem;
-		color: #6600FF;
+		color: #ffffff;
 	}
 
 
