--- a/main.css
+++ b/main.css
@@ -632,7 +632,7 @@ input, select, textarea {
 		}
 
 		.icon.brands:before {
-			font-family: 'Font Awesome 5 Brands';
+			font-family: 'Font Awesome 5 Brands', 'Font Awesome 5 Free';
 		}
 
 /* Image */
