--- a/main.css
+++ b/main.css
@@ -1153,7 +1153,7 @@ input, select, textarea {
   width: 100%;
   height: 100%;
 	background-size: cover;
-	background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("philly.jpg" );
+	background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("philly.jpg" );
 }
 		body.is-article-visible #bg:after {
 			-moz-transform: scale(1.0825);
@@ -1294,11 +1294,13 @@ input, select, textarea {
 
 		#header .content {
 			border-style: solid;
+			border-width: 2px;
 			border-color: #ffffff;
-			border-top-width: 1px;
-			border-bottom-width: 1px;
 			max-width: 100%;
-			backdrop-filter: blur(0.4rem);
+			backdrop-filter: blur(0.5rem);
+			box-shadow: 0 0 8rem #000000;
+			background-color: rgba(0,0,0,0.5);
+			border-radius: 30px;
 		}
 
 			#header .content .inner {
@@ -1335,9 +1337,9 @@ input, select, textarea {
 			margin-bottom: 0;
 			list-style: none;
 			padding-left: 0;
-			border-top: solid 1px #ffffff;
-			border-bottom: solid 1px #ffffff;
-			backdrop-filter: blur(.4rem);
+			border-radius: 5px;
+			border-width: 10px;
+			border-color: black;
 
 		}
 
@@ -1359,6 +1361,15 @@ input, select, textarea {
 					letter-spacing: 0.2rem;
 					font-size: 0.8rem;
 					border-bottom: 0;
+					border-style: solid;
+					margin: 0 10px 0rem 10px;
+					border-width: 1px;
+					border-color: #ffffff;
+					max-width: 100%;
+					box-shadow: 0 0 1rem #000000;
+					background-color: rgba(0,0,0,0.4);
+					backdrop-filter: blur(0.5rem);
+					border-radius: 25px;
 
 				}
 					#header nav ul li a:hover {
@@ -1370,17 +1381,19 @@ input, select, textarea {
   z-index: 1;
 						border: #eeeeee;
 						border-style: solid;
-						box-shadow: 0px 0px 1.5rem #ffffff;
-						background-color: #1b1f22;
+						background-color: slategrey;
 						border-width: 2px;
 						border-radius: 5px;
+						box-shadow: 0 0 5rem #ffffff;
+			border-radius: 25px;
 
 
 					}
 					#header nav ul li a:active {
 						background-color: #a8a8a8;
 						color: #242323;
-						backdrop-filter: blur(.75rem)
+						backdrop-filter: blur(.75rem);
+						background-color: rgba(0,0,0,0.4);
 					}
 
 		#header nav.use-middle:after {
