--- a/main.css
+++ b/main.css
@@ -1374,17 +1374,16 @@ input, select, textarea {
 				}
 					#header nav ul li a:hover {
 						
-							color: #ffffff;
-
-  position: relative;
-  z-index: 1;
+						color: #ffffff;
+						position: relative;
+						z-index: 1;
 						border: #eeeeee;
 						border-style: solid;
 						background-color: slategrey;
 						border-width: 2px;
 						border-radius: 5px;
 						box-shadow: 0 0 5rem #ffffff;
-			border-radius: 25px;
+						border-radius: 25px;
 
 
 					}
@@ -1507,6 +1506,7 @@ input, select, textarea {
 
 						#header nav ul li a {
 							height: 3rem;
+							margin: 5px;
 							line-height: 3rem;
 							min-width: 0;
 							width: 100%;
