--- a/main.css
+++ b/main.css
@@ -1155,6 +1155,105 @@ input, select, textarea {
 	background-size: cover;
 	background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("philly.jpg" );
 }
+.bubbly-button {
+  display: block;
+					min-width: 7.5rem;
+					height: 2.75rem;
+					line-height: 2.75rem;
+					padding: 0 0rem 0 0rem;
+					text-transform: uppercase;
+					letter-spacing: 0.2rem;
+					font-size: 0.8rem;
+					border-bottom: 0;
+								border-style: solid;
+					margin: 0 10px 0rem 10px;
+			border-width: 1px;
+			border-color: #ffffff;
+			max-width: 100%;
+			box-shadow: 0 0 1rem #000000;
+			background-color: rgba(0,0,0,0.4);
+					backdrop-filter: blur(0.5rem);
+			border-radius: 25px;
+					 font-weight: bold;
+}
+.bubbly-button:focus {
+}
+.bubbly-button:hover{
+	color: #ffffff;
+	background-color: #3e4b87;
+						position: relative;
+						border: #3e4b87;
+						border-style: solid;
+						border-width: 2px;
+						border-radius: 5px;
+						box-shadow: 0 0 5rem #3e4b87;
+			border-radius: 25px;
+
+}
+.bubbly-button:before, .bubbly-button:after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 140%;
+  height: 100%;
+  left: -20%;
+  z-index: -1000;
+  transition: all ease-in-out 1.5s;
+  background-repeat: no-repeat;
+}
+.bubbly-button:before {
+  display: none;
+  top: -75%;
+  background-image: radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, transparent 20%, #ff9900 20%, transparent 30%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff9900 15%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%);
+  background-size: 15% 15%, 25% 25%, 20% 20%, 25% 25%, 23% 23%, 15% 15%, 20% 20%, 15% 15%, 23% 23%;
+}
+.bubbly-button:after {
+  display: none;
+	font-size: 10rem;
+  bottom: -75%;
+  background-image: radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, transparent 10%, #ff9900 15%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%), radial-gradient(circle, #ff9900 20%, transparent 20%);
+  background-size: 20% 20%, 25% 25%, 23% 23%, 25% 25%, 20% 20%, 15% 15%, 25% 25%;
+}
+.bubbly-button:active {
+  transform: scale(0.9);
+  background-color: #a8a8a8;
+	color: #242323;
+  box-shadow: 0 2px 25px #ffffff;
+}
+.bubbly-button.animate:before {
+  display: block;
+  animation: topBubbles ease-in-out 0.75s forwards;
+}
+.bubbly-button.animate:after {
+  display: block;
+  animation: bottomBubbles ease-in-out 0.75s forwards;
+}
+
+@keyframes topBubbles {
+  0% {
+    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+
+  }
+  50% {
+    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+  }
+  100% {
+    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+  }
+}
+@keyframes bottomBubbles {
+  0% {
+    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+  }
+  50% {
+    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+  }
+  100% {
+    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+    background-size: 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%, 0% 0%;
+  }
+}
 		body.is-article-visible #bg:after {
 			-moz-transform: scale(1.0825);
 			-webkit-transform: scale(1.0825);
