--- a/main.css
+++ b/main.css
@@ -1932,4 +1932,92 @@ background: linear-gradient(to bottom right, #465EAF, #250E7A);;
     }
 }
 
-/* Waves Animation end*/
+
+.projects-list {
+  list-style-type: none;
+  text-align: center;
+	display: flow;
+}
+
+.projects-list li {
+  padding: 7px;
+  font-family: helvetica;
+  color: rgba(255, 255, 255, 0.6);
+  float: left;
+  cursor: pointer;
+  opacity: 1;
+  transition: all 0.25s;
+	border-radius: 25px;
+	background-color: #233657;
+	margin: .4rem;
+}
+
+.projects-list li:after {
+  overflow: hidden;
+
+  display: inline-block;
+  vertical-align: center;
+  font-weight: bold;
+  width: 0;
+  opacity: 1;
+  white-space: nowrap;
+  transition: all .5s;
+  box-sizing: border-box;
+  background-color: rgba(0,0,0,0.1);
+  border-radius: 4px;
+  height: 1px;
+  border: 1px solid rgba(0,0,0,0.04);
+}
+
+.projects-list li:hover {
+  position: relative;
+  z-index: 2;
+  opacity: 1;
+	padding: 12px;
+	border: 2px solid white;
+	background-color: #ff9900;
+	color: #ffffff;
+	border-radius: 25px;
+	transition: all 1s;
+	box-shadow: 0 0 .5rem #ffffff;
+
+}
+
+.projects-list li:hover:after {
+  width: 75px;
+  opacity: 1;
+	transition-delay: 0.75s;
+}
+
+/*.projects-list .Python {*/
+/*  background: #465EAF;*/
+/*}*/
+
+/*.projects-list .Tableau {*/
+/*  background-color: #250E7A;*/
+/*}*/
+
+/*.projects-list .Alteryx {*/
+/*  background-color: darkslateblue;*/
+/*}*/
+
+/*.projects-list .SQL {*/
+/*  background-color: darkslategray;*/
+/*}*/
+
+/*.projects-list .R-Programming {*/
+/*  background-color: darkcyan;*/
+/*}*/
+
+/*.projects-list .HTML {*/
+/*  background-color: darkorange;*/
+/*}*/
+
+/*.projects-list .Google-Analytics {*/
+/*  background-color: goldenrod;*/
+/*}*/
+
+/*.projects-list .Others {*/
+/*  background-color: #696969;*/
+/*}*/
+/*!* Waves Animation end*!*/
