--- a/main.css
+++ b/main.css
@@ -1192,7 +1192,7 @@ background: -webkit-linear-gradient(top left, #B7B7B7, #DDDDDD);
 background: -moz-linear-gradient(top left, #B7B7B7, #DDDDDD);
 background: linear-gradient(to bottom right, #B7B7B7, #DDDDDD);
 	position: relative;
-	border-color: #3222A9;
+	border-color: rgba(22, 34, 54,.8);
 	border-style: solid;
 	border-width: 2.5px;
 	box-shadow: 0px 0px .7rem  #a8a8a8;
