--- a/main.css
+++ b/main.css
@@ -160,7 +160,8 @@ input, select, textarea {
 		}
 
 	strong, b {
-		font-weight: 600;
+		font-weight: 400;
+    font-family: system-ui;
 	}
 
 	em, i {
